[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tiles/Fixed/Fixed.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tiles/Fixed/PressurePlate/PressurePlate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/pressurePlate.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "pressed",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "released",
"speed": 5.0
} ]

[node name="PressurePlate" groups=[
"Buttons",
] instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 6
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource( 3 )

[node name="Sprite" parent="." index="1"]
frames = SubResource( 1 )
animation = "New Anim"
[connection signal="area_entered" from="." to="." method="_on_PressurePlate_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_PressurePlate_area_exited"]
